css/conversor.css
html,
body {
  overflow-x: hidden;
}

body {
  font-family: Arial, sans-serif;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  color: white;
  background-color: #f5f5f5;
}

header {
  background-color: #b71c1c;
  padding: 1rem;
  text-align: center;
  color: white;
  border-bottom: 3px solid #000;
}

.container {
  background-color: #fff;
  max-height: 700px;
  max-width: 450px;
  padding: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 100px auto;
  border: solid #b71c1c;
  border-radius: 5%;
  margin-bottom: 100px;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
  transition: transform 0.5s, box-shadow 0.5s;
}

.container:hover {
  transform: scale(1.06);
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
}

footer {
  background-color: #b71c1c;
  padding: 2rem;
  text-align: center;
  width: 100%;
  flex-shrink: 0;
  border-top: 3px solid #000;
}

.texto-footer {
  color: #fff;
  font-weight: bold;
}

h1 {
  text-align: center;
  margin-bottom: 20px;
  color: white;
  font-family: "Times New Roman", Times, serif;
}

#titulo {
  color: #b71c1c;
}

form {
  display: flex;
  flex-direction: column;
}

label {
  margin-top: 10px;
  color: #b71c1c;
  font-family: Georgia, "Times New Roman", Times, serif;
}

input,
select {
  padding: 10px;
  margin: 5px 0;
  border: 1px solid #ccc;
  border-radius: 4px;
  border-color: #b71c1c;
}

button {
  background-color: #dc3545;
  color: #fff;
  font-family: Georgia, "Times New Roman", Times, serif;
  border: none;
  border-radius: 4px;
  padding: 10px;
  cursor: pointer;
  transition: opacity 0.5s;
}

button:hover {
  opacity: 0.8;
}

button:hover:not(:hover) {
  opacity: 1;
}

#resultado {
  margin-top: 20px;
  font-size: 18px;
  color: #b71c1c;
}

/* Media queries para dispositivos móveis */
@media screen and (max-width: 600px) {
  .container {
    width: 90%;
    margin: 50px auto;
  }

  header,
  footer {
    padding: 0.5rem;
  }
}

